# voice-ai-system

./: .env.example  .gitignore  README.md  docker-compose.yml
ai_engine/: Dockerfile  main.py  requirements.txt
ai_engine/pipeline/: asr_engine.py  emotion_engine.py  nlu_engine.py  pipeline.py  speaker_engine.py
ai_engine/speaker_db/: enroll.py  search.py
docs/: project-plan.md  test-audio-upload.md
esp32-firmware/: CMakeLists.txt
esp32-firmware/audio/: i2s_input.c  i2s_input.h  opus_encoder.c  opus_encoder.h
esp32-firmware/config/: device_config.c  device_config.h
esp32-firmware/main/: CMakeLists.txt  main.c
esp32-firmware/network/: http_upload.c  http_upload.h  wifi_manager.c  wifi_manager.h
scripts/: check-status.sh  deploy-server-a.sh  deploy-server-b.sh  init-db.sql  start.sh  stop.sh  test-audio-upload.py
server/: Dockerfile  requirements.txt
server/app/: __init__.py  main.py
server/app/api/: ws.py
server/app/core/: config.py  database.py  redis.py  search.py  security.py
server/app/models/: __init__.py  audio.py  device.py  result.py  task.py
server/app/services/: inference_worker.py
web/: Dockerfile  components.d.ts  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: App.vue
web/src/api/: audio.ts  auth.ts  device.ts  request.ts  speaker.ts  stats.ts  task.ts
web/src/layouts/: MainLayout.vue
web/src/router/: index.ts
web/src/views/: AlertConfig.vue  AudioDetail.vue  AudioList.vue  Dashboard.vue  DeviceManage.vue  Login.vue  (+5 more)
(+11 files in other folders)
